resolve ubuntu OS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # stripped before adding them to the entity manager)
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect*
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # Il faut créer une table provider
 #Une colone name ( String en primary key) , une colone amount ( en int)
 #
