--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/basketbdd
-spring.datasource.username=ludoaa
+spring.datasource.username=ludo
 spring.datasource.password=ludo
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
