--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/basketbdd
+spring.datasource.url=${url}
 spring.datasource.username=ludo
 spring.datasource.password=ludo
 # Keep the connection alive if idle for a long time (needed in production)
